@@ -1,3 +1,7 @@
+2010-10-11
+ * compute expected script duration
+ * allow specifiing tempdisable in days, hours or weeks
+
 2010-10-08
  * added messages mailing/commands/..
 
